--- a/notebooks/general-data-description.ipynb
+++ b/notebooks/general-data-description.ipynb
@@ -30,7 +30,7 @@
     "id": "MjPWhesSHJoO"
    },
    "source": [
-    "# Importar Librerias"
+    "# Import Libraries"
    ]
   },
   {
@@ -53,7 +53,7 @@
     "id": "LM4dC7lBHJoT"
    },
    "source": [
-    "# Cargar Datasets"
+    "# Load dataset"
    ]
   },
   {
@@ -76,6 +76,16 @@
     "# Dataset Description\n",
     "- Columns and rows \n",
     "- Data type and quality"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "|Feature Name| Type | Description and values | % Missing\n",
+    "|--|--|--|--|\n",
+    "| BeerID | Number | The Record Id |  0\n",
+    "| Name | Categorical (nominal) | The beer name | ? "
    ]
   },
   {
