Added the general data clean data set

--- a/notebooks/general-data-description.ipynb
+++ b/notebooks/general-data-description.ipynb
@@ -4594,33 +4594,17 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 86,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Dividir el dataset en Training set y Test set\n",
-    "\n",
-    "Este paso debe ser al inicio de los proyectos,  Se deben realizar todas las transformaciones, preparación de datos y limpieza de los datos, en el train set y en la evaluacion se deben aplicarl al test set y a los datos nuevos que lleguen al sistema. Esta division inicial se hace para evitar data leakage de los datos de test a los datos de train, por ejemplo en las imputaciones.\n",
-    "\n",
-    "Por este motivo se realizara en esta parte.\n",
-    "\n",
-    "Division de los datos de entrenamiento (Train set) y de Evaluacion (test - set), las divisiones utilizadas son\n",
-    "\n",
-    "- 80% (train) , 20%(test)\n",
-    "- 70% (train) , 30%(test)\n",
-    "\n",
-    "El **Train set** se hace para seleccion de Modelos y el **Test-set** solamente para la evaluacion Final"
+    "data_raw.to_parquet(\"../data/interim/beer_general_data_clean.parquet\", index = False)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
