|Feature Name| Type | Description and values | % Missing |--|--|--|--| | BeerID | Number | The Record Id |  0 | Name | Categorical (nominal) | The beer name | ? | StyleID | Number | The Numeric ID for type of brew | ? | Size(L)| Number | Amount brewed for recipe listed | ? | OG | Number | Specific gravity of wort before fermentation | ? | FG | Number (nominal) | Specific gravity of wort after fermentation | ? | ABV | Number | Alcohol By Volume | ? | IBU | Number | International Bittering Units | ? | Color | Number | Standard Reference Method - light to dark ex. 40 = black-  | ? | Boil | Number | Size Fluid at beginning of boil | ? | BoilTime | Number | Time wort is boiled | ? | BoilGravity | Number | Specific gravity of wort before the boil | ? | Efficiency | Number | Beer mash extraction efficiency - extracting sugars from the grain during mash | ? | MashThinckness | Number | Amount of water per pound of grain | ? | SugarScale | Categorical (nominal) | Scale to determine the concentration of dissolved solids in wort | ? | BrewMethod | Categorical (nominal) | Various techniques for brewing | ? | PitchRate | Number | Yeast added to the fermentor per gravity unit - M cells/ml/deg P | ? | PrimaryTemp | Number | Temperature at the fermenting stage | ? | PrimingMethod | Categorical (nominal) | N | ? | PrimingAmount | Categorical (nominal) | Amount of priming sugar used **(Analyzing tha dataset, the data type for this column contains number and categorical variables)** | ? | UserId | Number | The beer name | ? | Style| Categorical (nominal) | The type of brew | ?

--- a/notebooks/02-data-cleaning.ipynb
+++ b/notebooks/02-data-cleaning.ipynb
@@ -49,6 +49,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OG = 10.252025346184277\n",
+      "Efficiency = 10.361700720756465\n",
+      "SugarScale = 10.305152918482237\n",
+      "StyleID = 10.278475124667382\n",
+      "Size(L) = 10.228539767013935\n",
+      "BoilGravity = 13.765969623797506\n",
+      "BoilTime = 10.308801163790253\n",
+      "FG = 10.30788910246325\n",
+      "PrimaryTemp = 35.635604138022245\n",
+      "Style = 10.876559339850012\n",
+      "Color = 10.32088597637305\n",
+      "Name = 10.298996504524965\n",
+      "IBU = 10.279159170662636\n",
+      "BrewMethod = 10.241992671587237\n",
+      "BeerID = 10.228995797677436\n",
+      "ABV = 10.286911691942166\n"
+     ]
+    }
+   ],
+   "source": [
+    "for column in data_raw:\n",
+    "    print(f'{column} = {(data_raw[column].isnull().sum()/len(data_raw))*100}')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -70,6 +103,38 @@
     "- Variable Types (Categorical or Numeric)\n",
     "- Data Types (int, float, string, factor, boolean, ...)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "|Feature Name| Type | Description and values | % Missing\n",
+    "|--|--|--|--|\n",
+    "| BeerID | Number | The Record Id |  10.22%\n",
+    "| Name | Categorical (nominal) | The beer name | 10.30% \n",
+    "| StyleID | Number | The Numeric ID for type of brew | 10.28% \n",
+    "| Size(L)| Number | Amount brewed for recipe listed | 10.23% \n",
+    "| OG | Number | Specific gravity of wort before fermentation | 10.25% \n",
+    "| FG | Number (nominal) | Specific gravity of wort after fermentation | 10.30% \n",
+    "| ABV | Number | Alcohol By Volume | 10.29% \n",
+    "| IBU | Number | International Bittering Units | 10.28% \n",
+    "| Color | Number | Standard Reference Method - light to dark ex. 40 = black-  | 10.32% \n",
+    "| BoilTime | Number | Time wort is boiled | 10.38% \n",
+    "| BoilGravity | Number | Specific gravity of wort before the boil | 13.76% \n",
+    "| Efficiency | Number | Beer mash extraction efficiency - extracting sugars from the grain during mash | 10.36% \n",
+    "| SugarScale | Categorical (nominal) | Scale to determine the concentration of dissolved solids in wort | 10.30%\n",
+    "| BrewMethod | Categorical (nominal) | Various techniques for brewing | 10.24% \n",
+    "| PrimaryTemp | Number | Temperature at the fermenting stage | 35.63% \n",
+    "| Style| Categorical (nominal) | The type of brew | 10.87% \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
