--- a/notebooks/Plantilla_Trabajo_Final_Datos.ipynb
+++ b/notebooks/Plantilla_Trabajo_Final_Datos.ipynb
@@ -1089,7 +1089,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3.8.3 ('base')",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1103,7 +1103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.6"
   },
   "nbTranslate": {
    "displayLangs": [
@@ -1160,7 +1160,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "447c0f0993c7e50bc10ddc9bd7e362220c6ef046a7e5a6eb2fbe70cad79928d7"
+    "hash": "110fe3fb9777db4ce1f884af3cc527a40b2c98427ad17781c021ef692bd3d28d"
    }
   }
  },
